--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
   height: 80px;
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
 .navbar li {
@@ -43,7 +43,7 @@ body {
 }
 
 .about {
-  height: 90vh;
+  height: 60vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -139,6 +139,7 @@ body {
   .navbar ul {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
   }
 
   .about h1 {
