--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
   height: 80px;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-end;
 }
 
 .navbar li {
